# hive-mind

./: .env.template  README.md  main.py  pyproject.toml
src/external_models_mcp/: __init__.py  server.py
tests/: test_server.py
