[project]
name = "external-models-mcp"
version = "0.1.0"
description = "MCP server giving Gemini CLI access to external expert models (Groq, OpenRouter, HF)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.80.11",
    "mcp>=1.25.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
external-models-server = "external_models_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
